fixed alignment issues with top game bar and settings icons

--- a/src/ComponentsDesktop/Button/index.styles.css
+++ b/src/ComponentsDesktop/Button/index.styles.css
@@ -1,13 +1,12 @@
 .button {
     color: white;
     background-color: #ED553B;
-    width: 120px;
-    height: 40px;
-    border-radius: 20px;
+    border-radius: 16px;
     border: none;
     font-weight: bold;
     margin-top: 10px;
     margin-bottom: 10px;
+    padding: 10px
 }
 
 .button:hover {
