--- a/src/ComponentsDesktop/GameBoard/index.styles.css
+++ b/src/ComponentsDesktop/GameBoard/index.styles.css
@@ -15,6 +15,11 @@
 	color: #173F5F;
 }
 
+.icon {
+	padding-top: 8px;
+	padding-left: 4px;
+}
+
 .pause, .play{ 
 	color: #173F5F;
 }
@@ -27,13 +32,20 @@
 }
 
 #settings-nav{
+	width: 50vw;
+	min-width: 500px;
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
-	padding-left: 1%;
-	padding-right: 1%;
+	justify-content: space-between;
+	padding-top: 1%;
+	padding-left: 2%;
+	padding-right: 2%;
 	padding-bottom: 1%;
+}
+
+#sound-pause-container{
+	display: flex;
+	flex-direction: row;
 }
 
 .game-board{
